fix spacing between medal and name in badge

--- a/app/assets/stylesheets/components/badge/badges_index.scss
+++ b/app/assets/stylesheets/components/badge/badges_index.scss
@@ -81,3 +81,6 @@
     align-items: flex-start; 
     padding-top: 0.5rem; 
 }
+.badges_index-item-name-name {
+    padding-left: 0.25rem; 
+}
